Add hamburger nav menu

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,39 @@ body {
   .hamburger.isActive:hover span {
     background-color: var(--primary);
   }
-  
+  .hamburgerNav {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    min-height: 5vh;
+    display: block;
+    z-index: 1;
+    background-color: var(--clear);
+    padding-top: 120px;
+    transition: 0.4s;
+    border: 0;
+  }
+  .hamburgerNav.isActive {
+    left: 0;
+  }
+  .hamburgerNav a {
+    display: block;
+    text-align: center;
+    padding: 10px 10px;
+    background-color: var(--secondary);
+    width: 100%;
+    max-width: 150px;
+    margin: 0 auto 16px;
+    color: white;
+    text-decoration: none;
+    transition: 0.4s;
+    border-radius: 5px;
+  }
+  .hamburgerNav a:hover {
+    background-color: rgb(123, 161, 196); ;
+  }
+
   .navLinks, .socialLinks {
     display: none;
     justify-content: flex-end;
@@ -85,6 +117,13 @@ body {
   .navLinks a.isActive, .navLinks a:hover, .socialLinks a:hover, footer a:hover, .contactLinks a:hover {
       color: var(--primary);
   }
+  .navContainer {
+    max-width: 1280px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
   nav {
     position: fixed;
     top: 0;
@@ -98,7 +137,6 @@ body {
   #mainTop, .skills, .portfolio, .mainContact {
     width: 100vw;
     height: 80vh;
-    /* padding-top: 44.59px; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -135,7 +173,7 @@ body {
   .mainImg {
     width: 80vw;
     height: 30vh;
-    z-index: 1;
+    /* z-index: 1; */
     /* border: 2px solid blue; */
     overflow: hidden;
     border-radius: 10px;
@@ -599,13 +637,13 @@ footer span {
   color: var(--secondary);
 }
 }
-.navContainer {
+/* .navContainer {
   max-width: 1280px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
+} */
 #logo {
   font-family: 'gotham', 'sans-serif';
   font-size: 1.2rem;
